samples/_failures_safe/1761077650_70b41e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5defb9ab.c: In function ‘main’:
./samples/SAFE/__tmp_5defb9ab.c:151:13: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  151 |             input
      |             ^~~~~
      |             int
./samples/SAFE/__tmp_5defb9ab.c:151:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5defb9ab.c:151:18: error: expected ‘;’ at end of input
  151 |             input
      |                  ^
      |                  ;
./samples/SAFE/__tmp_5defb9ab.c:151:13: error: expected declaration or statement at end of input
  151 |             input
      |             ^~~~~
./samples/SAFE/__tmp_5defb9ab.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5defb9ab.c:151:13: error: expected declaration or statement at end of input
